<resources>
    <string name="app_name">farmbnb</string>
    <string name="login">Login</string>
    <string name="farmbnb">FarmBnb</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="farmhouse">FarmHouse</string>
    <string name="barn">Barn</string>
    <string name="shepherds_hut">Shepherds Hut</string>
    <string name="catering"><u>Catering</u></string>
    <string name="detail"><u>Detail</u></string>
    <string name="book_now">Book Now</string>
    <string name="thank_you">Thank You!</string>
    <string name="home">Home</string>
    <string name="login_success">Login Success</string>
    <string name="channel_name">ChannelName</string>
    <string name="channel_description">ChannelDescription</string>
    <string name="phone_number_underline"><u>Phone Number</u></string>
    <string name="address"><u>Address</u></string>
    <string name="user_class"><u>User Class</u></string>
    <string name="record">Record</string>
</resources>