<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/logo_background"
                tools:ignore="MissingConstraints"
                android:contentDescription="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="48dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/logo_background"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shojumaru"
                android:textSize="36sp"
                android:text="@string/farmbnb"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/shojumaru"
            android:textSize="36sp"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:layout_marginTop="24dp"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:autofillHints="@string/phone_number" />
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:layout_marginTop="12dp"
        android:inputType="numberPassword"
        android:hint="@string/password"
        android:autofillHints="@string/phone_number" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/shojumaru"
            android:paddingStart="48dp"
            android:paddingTop="10dp"
            android:paddingEnd="48dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textSize="30sp"
            android:minWidth="300dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            app:cornerRadius="10dp" />
    </RelativeLayout>

</LinearLayout>