<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_background"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="240dp"
            android:layout_height="240dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/logo_background"
                android:contentDescription="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shojumaru"
                    android:textSize="36sp"
                    android:text="@string/farmbnb"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/shojumaru"
            android:paddingStart="48dp"
            android:paddingTop="10dp"
            android:paddingEnd="48dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textSize="30sp"
            android:minWidth="300dp"
            app:cornerRadius="10dp" />
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/shojumaru"
            android:paddingStart="48dp"
            android:paddingTop="10dp"
            android:paddingEnd="48dp"
            android:paddingBottom="10dp"
            android:text="@string/register"
            android:textSize="30sp"
            android:minWidth="300dp"
            app:cornerRadius="10dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>