<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/back_button"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/user"
            android:contentDescription="@null" />
    </LinearLayout>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/shojumaru"
        android:text="xxx"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shojumaru"
            android:text="@string/phone_number_underline"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shojumaru"
            android:text="xxx"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/shojumaru"
            android:text="@string/address"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shojumaru"
            android:text="xxx"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/shojumaru"
            android:text="@string/user_class"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/userClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shojumaru"
            android:text="xxx"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/shojumaru"
            android:minWidth="300dp"
            android:paddingStart="48dp"
            android:paddingTop="10dp"
            android:paddingEnd="48dp"
            android:paddingBottom="10dp"
            android:text="@string/record"
            android:textSize="30sp"
            app:cornerRadius="10dp" />
    </RelativeLayout>
</LinearLayout>