<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/farmHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/farmhouse" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shojumaru"
            android:text="@string/farmhouse"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/barn" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shojumaru"
            android:text="@string/barn"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/shepherds_hut" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shojumaru"
            android:text="@string/shepherds_hut"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>